fix footer spacing

--- a/frontend/src/styles/Footer.scss
+++ b/frontend/src/styles/Footer.scss
@@ -14,7 +14,6 @@ $color-button-text: #fff1ed;
   border-top: 3px solid #FF8197;
   color: #374B73;
   font-family: Arial, Helvetica, sans-serif;
-  margin-top: 90px;
 }
 
 
